[package]
name = "memo-cache"
version = "0.8.0"
edition = "2021"
authors = ["Kris van Rens <krisvanrens@gmail.com>"]
categories = ["caching", "data-structures", "no-std"]
description = "A small, fixed-size cache with retention management"
repository = "https://github.com/krisvanrens/memo-cache-rs"
keywords = ["caching", "memo", "memoize", "memoization", "no_std"]
license = "Apache-2.0 OR MIT"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"

[features]
default = ["inline-more"]

# Enable more inlining of functions at the cost of compile time (enabled by default).
inline-more = []

[[bench]]
name = "memo_cache"
harness = false
